--- a/MAUI APP 2/MauiApp2/MauiApp2/MainPage.xaml
+++ b/MAUI APP 2/MauiApp2/MauiApp2/MainPage.xaml
@@ -24,6 +24,7 @@
                 </Grid.ColumnDefinitions>
                 <Button
                     Text="Display Text"
+                    Padding="5"
                     Grid.Column="0"
                     Clicked="OnDisplayClicked"/>
                 <Button
